# backend/src/swagger/swagger.json
@@ -613,6 +613,40 @@
           }
         }
       }
+    },
+    "/user/usercards": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "get users' similar cards",
+        "description": null,
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get user profile successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "friends": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/User"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
